<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003057"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/TopLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B3A369"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/FloorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/gantari_semibold"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/TopBarFloorText"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#B3A369"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <ImageView
            android:id="@+id/LeftArrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:contentDescription="@string/ContentDescriptionLeftArrow"
            android:rotation="180"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:srcCompat="@drawable/arrow_icon_1174" />

        <ViewAnimator
            android:id="@+id/NumberDisplay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:padding="5dp">

            <TextView
                android:id="@+id/Number1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/gantari_semibold"
                android:text="@string/Floor1Text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/Number2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/gantari_semibold"
                android:text="@string/Floor2Text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/Number3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/gantari_semibold"
                android:text="@string/Floor3Text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="48sp" />

        </ViewAnimator>

        <ImageView
            android:id="@+id/RightArrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:contentDescription="@string/ContentDescriptionRightArrow"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:srcCompat="@drawable/arrow_icon_1174" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <ImageView
            android:id="@+id/LockButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:contentDescription="@string/ContentDescriptionLockImage"
            android:padding="20dp"
            app:srcCompat="@drawable/locked" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ImageLayout"
        android:layout_width="409dp"
        android:layout_height="579dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/BottomLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopLinearLayout">

        <ImageView
            android:id="@+id/ParkingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/parking_image"
            app:srcCompat="@drawable/testimage" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>